# ChangeLog for dev-perl/IO-stringy
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-stringy/ChangeLog,v 1.30 2006/08/05 04:48:02 mcummings Exp $

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  IO-stringy-2.109.ebuild, IO-stringy-2.110.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-IO-stringy-2.109, Manifest:
  Fixing SHA256 digest, pass four

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  IO-stringy-2.110.ebuild:
  Add ~x86-fbsd keyword.

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> IO-stringy-2.110.ebuild:
  stable on amd64

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> IO-stringy-2.110.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  IO-stringy-2.110.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  IO-stringy-2.110.ebuild:
  Marking stable sparc x86

  19 Oct 2005; Rene Nussbaumer <killerfox@gentoo.org>
  IO-stringy-2.110.ebuild:
  Unstable on hppa.

  14 Oct 2005; Aron Griffis <agriffis@gentoo.org> IO-stringy-2.110.ebuild:
  Mark 2.110 stable on alpha

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> IO-stringy-2.110.ebuild:
  Mark 2.110 stable on ia64

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> IO-stringy-2.110.ebuild:
  add ~ia64

*IO-stringy-2.110 (27 Apr 2005)

  27 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -IO-stringy-2.108-r1.ebuild, -IO-stringy-2.108.ebuild,
  IO-stringy-2.109.ebuild, +IO-stringy-2.110.ebuild:
  Cleaning

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  IO-stringy-2.109.ebuild:
  Stable on ppc.

  01 Apr 2005; Simon Stelling <blubb@gentoo.org> IO-stringy-2.109.ebuild:
  stable on amd64

  07 Feb 2005; Bryan Østergaard <kloeri@gentoo.org>
  IO-stringy-2.109.ebuild:
  Stable on alpha.

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> IO-stringy-2.109.ebuild:
  Stable on ppc64
